# rust_proc_macro_play

./: Cargo.toml  demo.py
.github/workflows/: rust.yml
attr_macro/: Cargo.toml
attr_macro/src/: lib.rs
core/: Cargo.toml  pyproject.toml
core/src/: lib.rs  si.rs
core_api/: .gitignore  Cargo.toml  pyproject.toml
core_api/src/: lib.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
si_api/: Cargo.toml
src/: main.rs
