[package]
name = "use_attr_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.37"
proc_macros = { path = "../proc_macros" }
uom = { features = ["use_serde"], git = "https://github.com/groscoe2/uom" }
