[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "core"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
uom = { features = ["use_serde"], git = "https://github.com/groscoe2/uom" }
proc_macros = { path = "../proc_macros" }