[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = {version = "1.0.91", features = ["extra-traits"]}
si_api = { path = "../si_api" }
pyo3 = { version = "0.15.1", features = ["extension-module"] }

[lib]
proc-macro = true
